# GithubOrgTracker

./: .gitignore  CHANGELOG.md  GitHubTracker.cabal  README.md  Setup.hs  cabal.project  flake.nix  fourmolu.yaml  hie.yaml
app/: Main.hs
sql/: distinct_orgs.sql
src/: Defaults.hs  MyLib.hs
src/CLI/: Commander.hs  Generic.hs  Turtle.hs  Wizard.hs
src/DB/: Analysis.hs  Persistent.hs  Selda.hs  SeldaRepo.hs  UpdateDB.hs
src/DB/Persistent/: Persistent.hs
src/GraphQL/: API.hs  HelperTH.hs  Mythology.gql  Query.hs  schema.gql
src/Lick/: Liquid.hs  Liquid.spec_not
