cabal-version:      2.4
name:               GitHubTracker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hal Henke
maintainer:         halhenke@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
data-files:
    src/GraphQL/github.gql

library
    exposed-modules:
        MyLib,
        DB.Selda,
        DB.SeldaRepo
        -- DB.Persistent


    -- Modules included in this library but not exported.
    other-modules:
        GraphQL.API,
        GraphQL.HelperTH,
        CLI.Commander
        CLI.Wizard
        CLI.Turtle
        GraphQL.API
        GraphQL.HelperTH
        GraphQL.Query
        DB.UpdateDB
        DB.Analysis
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    --     NoImplicitPrelude
    build-depends:
        base,
        bytestring,
        relude,
        commander-cli,
        wizards,
        -- microlens,
        -- microlens-th,
        persistent,
        persistent-sqlite,
        -- persistent-template,
        lens,
        liquidhaskell,
        morpheus-graphql-client,
        morpheus-graphql-core,
        morpheus-graphql,
        template-haskell,
        time,
        file-embed,
        req,
        selda,
        selda-sqlite,
        turtle
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
    mixins: base hiding (Prelude)
            , relude (Relude as Prelude)
            , relude

executable GitHubTracker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        relude,
        GitHubTracker

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
