cabal-version:      2.4
name:               GitHubTracker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hal Henke
maintainer:         halhenke@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
data-files:
    src/GraphQL/schema.gql
custom-setup
  setup-depends: Cabal, base, liquidhaskell

common common-options
    ghc-options:       -fwrite-ide-info
                       -hiedir=.hie
                       -fplugin=LiquidHaskell
library
    import: common-options
    exposed-modules:
        MyLib,
        DB.Selda,
        DB.SeldaRepo
        -- DB.Persistent
    -- Modules included in this library but not exported.
    other-modules:
        CLI.Commander
        CLI.Generic
        CLI.Wizard
        CLI.Turtle
        Defaults
        GraphQL.API
        GraphQL.HelperTH
        GraphQL.Query
        Lick.Liquid
        DB.UpdateDB
        DB.Analysis
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    --     NoImplicitPrelude
    build-depends:
        -- base,
        bytestring,
        colourista,
        relude,
        exceptions,
        commander-cli,
        wizards,
        -- microlens,
        -- microlens-th,
        persistent,
        persistent-sqlite,
        -- persistent-template,
        relude,
        lens,
        liquid-base,
        liquidhaskell >= 0.8.10,
        morpheus-graphql-client,
        morpheus-graphql-core,
        morpheus-graphql,
        optparse-generic,
        template-haskell,
        time,
        -- vector,
        liquid-vector,
        file-embed,
        req,
        selda,
        selda-sqlite,
        turtle
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
    mixins:
            -- base hiding (Prelude)
            -- , liquid-base hiding (Prelude)
            -- , relude (Relude as Prelude)
            -- , relude
    ghc-options: -fplugin=LiquidHaskell

executable GitHubTracker
    import:         common-options
    main-is:        Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        -- base,
        liquid-base,
        liquidhaskell >= 0.8.10,
        relude,
        GitHubTracker

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
    ghc-options: -fplugin=LiquidHaskell


